# aiswitch

./: Dockerfile  LICENSE  docker-compose.yml
.github/workflows/: ci.yml
backend/: .gitignore  Cargo.toml
backend/src/: config.rs  main.rs
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.tsx  Layout.tsx  Logs.tsx  Review.tsx  api.ts  index.css  main.tsx  store.ts
frontend/src/components/: InputKey.tsx  app-sidebar.tsx  chat.tsx  combobox.tsx  logs-table.tsx  memoized-markdown.tsx  message.tsx  presets-edit.tsx  provider-edit.tsx  provider-form.tsx  provider-list.tsx
frontend/src/types/: provider.ts
