[package]
name = "aiswitch"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
reqwest = { version = "0.12", features = ["json"] }
rocket_cors = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = "0.32"
indexmap = { version = "2", features = ["serde"] }
log = "0.4"
dirs = "6"
